# nag

./: .gitignore  README.md  index.html  pyproject.toml  pyrightconfig.json
config/davis/: bear.yaml  blackswan.yaml  boat.yaml  car-shadow.yaml  elephant.yaml  flamingo.yaml  hike.yaml  horsejump-high.yaml  kite-surf.yaml  kite-walk.yaml  libby.yaml  lucia.yaml  motorbike.yaml  swing.yaml  tennis.yaml
data/: readme.md
docs/: datasets.md  installation.md  reproducibility.md  training.md
nag/: __init__.py
nag/analytics/: nag_result_model.py  nag_result_model_config.py  result_comparison.py  result_model.py  result_model_config.py
nag/callbacks/: logging_callback.py  nag_callback.py  tqdm_progress_bar.py
nag/config/: camera_config.py  encoding_config.py  hash_grid_encoding_config.py  intrinsic_camera_config.py  nag_config.py  network_config.py  oneblob_encoding_config.py  pinhole_camera_config.py
nag/dataset/: nag_dataset.py
nag/error/: box_not_found_error.py  ignore_object_error.py  model_build_exception.py
nag/homography/: cached_video_homography_finder.py  homography_finder.py  loftr_match_finder.py  match_finder.py  sequence_homography_finder.py  sift_match_finder.py
nag/loss/: l1.py  l1_mask_loss.py  mask_loss.py  mask_loss_mixin.py  ssim.py  wl1.py
nag/model/: background_image_plane_scene_node_3d.py  background_plane_scene_node_3d.py  camera_scene_node_3d.py  discrete_camera_scene_node_3d.py  discrete_plane_scene_node_3d.py  epoch_state_mixin.py  hooks.py  learned_aberration_plane_scene_node_3d.py  learned_alpha_location_image_plane_scene_node_3d.py  learned_camera_scene_node_3d.py  learned_color_alpha_location_image_plane_scene_node_3d.py  learned_image_plane_scene_node_3d.py  learned_offset_scene_node_3d.py  mixed_precision_custom.py  nag_functional_model.py  nag_model.py  phase.py  texture_mappable_scene_node_3d.py  time_dependent_background_image_plane_scene_node_3d.py  timed_box_scene_node_3d.py  (+7 more)
nag/utils/: viz.py  (+4 more)
(+192 files in other folders)
